--- a/Lab 3.uvprojx
+++ b/Lab 3.uvprojx
@@ -450,6 +450,11 @@
               <FileType>5</FileType>
               <FilePath>.\camera.h</FilePath>
             </File>
+            <File>
+              <FileName>pid.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\pid.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
