--- a/Lab 3.uvprojx
+++ b/Lab 3.uvprojx
@@ -455,6 +455,11 @@
               <FileType>1</FileType>
               <FilePath>.\pid.c</FilePath>
             </File>
+            <File>
+              <FileName>pid.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\pid.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
